Change Log for Kicad
Started 2007-June-11

Please add newer entries at the top, list the date and your name with
email address.


2008-Jan-24 UPDATE  Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+pcbnew:
	Bugs about fill zones removed (not all, of course).
	Fixed an old bug in block delete (could crashes pcbnew after deleting footprints).


2008-Jan-23 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+pcbnew:
  * Export a *.dsn file includes ZONE_CONTAINERs, was actually able to load
    a board with zones into the freerouter.net package!  No components, traces yet,
    just zones and layers.  Fixed parsers and Format()ers.
  * Rewrote SPECCTRA_DB::readTIME() to dodge a missing strptime() on windows.


2008-Jan-23 UPDATE  Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+pcbnew:
    Plot option in GERBER format Plot (Exclude Edge Pcb layer) modification:
    - the default is OFF (like odl pcbnew versions)
    - this setup is now save in config (is persistant)
    
    In Zone creation, now delete last created corner works.

2008-Jan-22 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+pcbnew:
  * Actually able now to export a *.dsn file, but the contents of the file
    is incomplete, not a complete input BOARD.
  * Added DRAWSEGMENT::Show() for debugging.
  * Changed specctra.h's POINT to use double for coordinates.  Changed format
    string for Format()ing a double.
  * Changed specctra_export.cpp to actually output an incomplete file.
  * Added BOARD::GetCopperLayerCount() and BOARD::GetLayerName().


2008-Jan-21 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+pcbnew: